# Adafruit_CircuitPython_TLC5947

./: .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.rst  README.rst.license  adafruit_tlc5947.py  conf.py  optional_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: adafruit_circuitpython_pr.md
.github/workflows/: build.yml  failure-help-text.yml  release_gh.yml
LICENSES/: Unlicense.txt
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  requirements.txt
docs/_static/: favicon.ico.license
examples/: simpletest.py  tlc5947_chain.py  tlc5947_simpletest.py
