# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
   "setuptools==75.1.0",
    "wheel==0.44.0",
    "setuptools-scm==8.1.0",
]

[project]
name = "adafruit_tlc5947"
description = "CircuitPython library for TLC5947 12-bit 24 channel LED PWM driver."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/sphere-drones/Adafruit_CircuitPython_TLC5947"}
keywords = [
    "adafruit",
    "tlc5947",
    "12-bit",
    "24-channel",
    "led",
    "pwm",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Adafruit-Blinka==8.49.0 "
   ]
   
[tool.setuptools]
py-modules = ["adafruit_tlc5947"]

